--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -1,38 +1,32 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app version="3.0" xmlns="http://java.sun.com/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd">
-    
     <!--LOGIN-->
     <servlet>
         <servlet-name>LoginServlet</servlet-name>
         <servlet-class>edu.vt.cs5244.LoginServlet</servlet-class>
     </servlet>
+
     <servlet-mapping>
         <servlet-name>LoginServlet</servlet-name>
         <url-pattern>/servlet/LoginServlet</url-pattern>
     </servlet-mapping>
-    
     <servlet>
         <servlet-name>login</servlet-name>
         <jsp-file>/login/login.jsp</jsp-file>
     </servlet>
-   
     <servlet-mapping>
         <servlet-name>login</servlet-name>
         <url-pattern>/login/login.jsp</url-pattern>
     </servlet-mapping>
-
-    
     <!--REGISTRATION-->
     <servlet>
         <servlet-name>RegistServlet</servlet-name>
         <servlet-class>edu.vt.cs5244.RegistServlet</servlet-class>
     </servlet>
-    
     <servlet-mapping>
         <servlet-name>RegistServlet</servlet-name>
         <url-pattern>/servlet/RegistServlet</url-pattern>
     </servlet-mapping>
-    
     <servlet>
         <servlet-name>registration</servlet-name>
         <jsp-file>/registration/registration.jsp</jsp-file>
@@ -41,7 +35,6 @@
         <servlet-name>registration</servlet-name>
         <url-pattern>/registration/registration.jsp</url-pattern>
     </servlet-mapping>
-    
     <!--MAIN PLAYER PAGE-->
     <servlet>
         <servlet-name>MainPlayerServlet</servlet-name>
@@ -59,7 +52,6 @@
         <servlet-name>mainplayer</servlet-name>
         <url-pattern>/game/mainplayer.jsp</url-pattern>
     </servlet-mapping>
-    
     <!--OFFERRED GAME PAGE-->
     <servlet>
         <servlet-name>offeredGames</servlet-name>
@@ -69,7 +61,6 @@
         <servlet-name>offeredGames</servlet-name>
         <url-pattern>/game/offeredGames.jsp</url-pattern>
     </servlet-mapping>
-    
     <servlet>
         <servlet-name>OfferedGamesServlet</servlet-name>
         <servlet-class>edu.vt.cs5244.OfferedGamesServlet</servlet-class>
@@ -78,7 +69,6 @@
         <servlet-name>OfferedGamesServlet</servlet-name>
         <url-pattern>/servlet/OfferedGamesServlet</url-pattern>
     </servlet-mapping>
-    
     <!--START GAME PAGE-->
     <servlet>
         <servlet-name>startGame</servlet-name>
@@ -88,20 +78,39 @@
         <servlet-name>startGame</servlet-name>
         <url-pattern>/game/startGame.jsp</url-pattern>
     </servlet-mapping>
-    
     <servlet-mapping>
         <servlet-name>StartGameServlet</servlet-name>
-        <url-pattern>/servlet/StartGameServlet</url-pattern>
+        <url-pattern>/game/servlet/edu.vt.cs5244.StartGameServlet</url-pattern>
     </servlet-mapping>
     <servlet>
         <servlet-name>StartGameServlet</servlet-name>
         <servlet-class>edu.vt.cs5244.StartGameServlet</servlet-class>
     </servlet>
+
+    
+   <!--ACCEPT GAME PAGE-->
+   <servlet>
+        <servlet-name>acceptGame</servlet-name>
+        <jsp-file>/game/acceptGame.jsp</jsp-file>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>acceptGame</servlet-name>
+        <url-pattern>/game/acceptGame.jsp</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>AcceptGameServlet</servlet-name>
+        <url-pattern>/game/edu.vt.cs5244.AcceptGameServlet</url-pattern>
+    </servlet-mapping>
+    <servlet>
+        <servlet-name>AcceptGameServlet</servlet-name>
+        <servlet-class>edu.vt.cs5244.AcceptGameServlet</servlet-class>
+    </servlet>
+    
+    
     
     <session-config>
         <session-timeout>
             30
         </session-timeout>
     </session-config>
-    
 </web-app>
